"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-03-23	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-15-scm-01-07:
	  Added chpsim event node pointer SMOB.  We can use a pointer because
		for the lifetime of the interpreter, the event pool is
		statically allocated.  
	  Added simple print-all events scm test case.  
	  Next: event accessor functions (more notes in scm/TODO)


2007-03-22	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-15-scm-01-06:
	  Bug fixed: chpsim trace_manager wasn't updating previous_events
		counter per flush, resulting in badly offset cause event IDs.
	  Minor: return value of prsim and chpsim clamped to 0 and 1, 
		was letting interpreter's return value code escape to exit.
	  More scm test cases added, and growing...


	* HACKT-00-01-04-main-00-81-15-scm-01-05:
	  scm/hackt/streams.scm: fixed definition of stream-filter and tested, 
		added and used cons-stream, slightly different definition
		than from SICP based on the use in ice-9/streams.  
	  scm/hackt/chpsim-trace.scm: added entry accessors, which can
		be replaced in the future.  
	  Going to be a series of little revisions while we shake out bugs
		one at a time.


	* HACKT-00-01-04-main-00-81-15-scm-01-04:
	  guile/libhackt-wrap.cc: now defines primitives in module
		"hackt hackt-primitives", autoloaded as such on startup.
	  guile::main() and guile/chpsim-wrap.cc now use these.
	  No tests were affected.  


2007-03-21	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-15-scm-01-03:
	  Glory!  Successfully demonstrated working C/Scheme module.
	  current-trace-entry: now returns EOL instead of throwing error
		upon end of stream.  
	  guile/chpsim-wrap.{h,cc}: can now load module-exported symbols
		through scm_init_hackt_chpsim_trace_primitives_module().