@@ -1,5 +1,5 @@
 # "src/scm/Makefile.am"
-#	$Id: Makefile.am,v 1.1.2.2 2007/03/22 05:17:49 fang Exp $
+#	$Id: Makefile.am,v 1.1.2.3 2007/03/24 03:30:39 fang Exp $
 
 include $(top_srcdir)/Make.stddef
 
@@ -7,7 +7,9 @@ scmdir = $(pkgdatadir)/scm
 
 # install as $(pkgdatadir)/scm/hackt/...
 nobase_dist_scm_DATA = \
+	hackt/algorithm.scm \
 	hackt/streams.scm \
+	hackt/hackt.scm \
 	hackt/chpsim-trace.scm
 
 EXTRA_DIST += README \
