@@ -1,5 +1,5 @@
 # "test/chpsim/Makefile.am"
-#	$Id: Makefile.am,v 1.8.2.5 2007/03/23 23:16:28 fang Exp $
+#	$Id: Makefile.am,v 1.8.2.6 2007/03/24 03:30:47 fang Exp $
 # Test auto-Makefile for chpsim.  
 
 include $(top_srcdir)/test/Make.test-head
@@ -154,7 +154,7 @@ HACKT_CHPSIM_GUILE_TEST_SCRIPTS_PASSES = \
 	channel-sync-desync-a-05 channel-sync-desync-a-06 \
 	channel-sync-desync-a-07 channel-sync-desync-a-08 \
 	channel-sync-desync-a-09 channel-sync-desync-a-10 \
-	channel-sync-desync-a-11
+	channel-sync-desync-a-11 channel-sync-desync-a-12
 
 HACKT_CHPSIM_GUILE_TEST_SCRIPTS_FAILURES =
 
