@@ -1,0 +1,4 @@
+((2 10.0 2 . 0) (7 30.0 2 . 5))
+((0 0.0 0 . 0) (1 10.0 1 . 0) (3 10.0 8 . 0) (4 20.0 6 . 3) (5 20.0 7 . 3) (6 30.0 1 . 4) (8 30.0 5 . 5) (9 40.0 4 . 8))
+()
+((0 0.0 0 . 0) (1 10.0 1 . 0) (2 10.0 2 . 0) (3 10.0 8 . 0) (4 20.0 6 . 3) (5 20.0 7 . 3) (6 30.0 1 . 4) (7 30.0 2 . 5) (8 30.0 5 . 5) (9 40.0 4 . 8))
