@@ -1,0 +1,19 @@
+#!hacguile -b
+!#
+;; "031a-03.hacscm"
+;;	$Id: 031a-03.hacscm,v 1.1.2.1 2007/03/24 03:30:51 fang Exp $
+;; vi: ft=scheme
+;; @haco@ 031a.haco-a
+
+(use-modules (hackt hackt))
+
+(define refs (collect-reference-subinstances (parse-raw-reference "load")))
+
+; splitting out by type and index
+(map reference-type refs)
+(map reference-index refs)
+
+(filter (lambda (r) (= process-tag (reference-type r))) refs)
+(filter (lambda (r) (= int-tag (reference-type r))) refs)
+(filter (lambda (r) (= bool-tag (reference-type r))) refs)
+
