@@ -1,0 +1,5 @@
+(1 1 1 1 1 1 1 5 5 5 5)
+(7 6 5 4 3 2 1 4 3 2 1)
+((1 . 7) (1 . 6) (1 . 5) (1 . 4) (1 . 3) (1 . 2) (1 . 1))
+((5 . 4) (5 . 3) (5 . 2) (5 . 1))
+()
