@@ -1,0 +1,20 @@
+#!hacguile -b
+!#
+;; "031a-03.hacscm"
+;;	$Id: 031a-04.hacscm,v 1.1.2.1 2007/03/24 03:30:53 fang Exp $
+;; vi: ft=scheme
+;; @haco@ 031a.haco-a
+
+(use-modules (hackt hackt))
+(use-modules (hackt algorithm))
+
+(define refs (collect-reference-subinstances (parse-raw-reference "load")))
+
+; expect two lists of references: processes and non-processes
+(define pl (filter-split (lambda (r) (= process-tag (reference-type r))) refs))
+pl
+; select the first list
+(car pl)
+; select the second list
+(cdr pl)
+
