@@ -1,5 +1,11 @@
 # "test/ChangeLog"
 
+2007-03-23	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-81-15-scm-01-08:
+	  Added GUILE_LOAD_PATH to .hacscm tests (suffix rule).
+
+
 2007-03-21	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-81-15-scm-01-04:
